--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -18,7 +18,8 @@
     "comma-dangle": 0,
     "consistent-return": 0,
     "curly": ["error", "multi-line"],
-    "eofline": 2,
+    "eofline": "always",
+    "import/no-unresolved": [2, { "commonjs": 2 }],
     "indent": [2, 2],
     "max-len": ["error", { "code": 110 }],
     "new-cap": 0,
