--- a/package.json
+++ b/package.json
@@ -5,7 +5,11 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon --exec babel-node server",
+    "prod:build": "npm run clean && npm run build && npm run start",
+    "start": "pm2 start node dist/index.js",
+    "stop:all": "pm2 stop all",
     "build": "babel server --out-dir dist",
+    "clean": "rm -rf ./build ",
     "test": "nyc mocha --timeout 20000 -r esm --exit",
     "db:seed": "sequelize db:seed:all",
     "db:migrate-undo": "sequelize db:migrate:undo:all",
@@ -34,6 +38,7 @@
     "husky": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
+    "pm2": "^4.5.0",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.0",
     "socket.io": "^2.3.0"
