--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "prod:build": "npm run clean && npm run build && npm run start",
     "start": "node dist/index.js",
     "stop:all": "pm2 stop all",
-    "build": "babel server --out-dir dist",
+    "build": "npm run clean && babel server --out-dir dist",
     "clean": "rm -rf ./build ",
     "test": "nyc mocha --timeout 20000 -r esm --exit",
     "pm2:log": "pm2 log",
@@ -18,8 +18,7 @@
     "db:rollback": "npm run db:migrate-undo && npm run db:migrate",
     "syncenv": "node envcheck.js",
     "lint": "eslint '**/*.js'",
-    "lint:fix": "prettier-eslint '**/*.js' --write",
-    "heroku-postbuild": "npm run clean && npm run build && npm run start"
+    "lint:fix": "prettier-eslint '**/*.js' --write"
   },
   "repository": {
     "type": "git",
@@ -34,9 +33,11 @@
   "dependencies": {
     "bcryptjs": "^2.4.3",
     "bluebird": "^3.7.2",
+    "compression": "^1.7.4",
     "cors": "^2.8.5",
     "dotenv": "^8.2.0",
     "express": "^4.17.1",
+    "helmet": "^4.1.1",
     "husky": "^4.3.0",
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
