added pm2 start command

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon --exec babel-node server",
     "prod:build": "npm run clean && npm run build && npm run start",
-    "start": "node dist/index.js",
+    "start": "npm run clean && pm2 start node dist/index.js",
     "stop:all": "pm2 stop all",
     "build": "babel server --out-dir dist",
     "clean": "rm -rf ./build ",
