--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "jsonwebtoken": "^8.5.1",
     "pg": "^8.4.1",
     "pm2": "^4.5.0",
+    "redis": "^3.0.2",
     "sequelize": "^5.21.5",
     "sequelize-cli": "^5.5.0",
     "socket.io": "^2.3.0"
@@ -64,7 +65,7 @@
   "devDependencies": {
     "@babel/cli": "^7.5.5",
     "@babel/core": "^7.5.5",
-    "@babel/node": "^7.5.5",
+    "@babel/node": "^7.12.1",
     "@babel/plugin-transform-runtime": "^7.9.0",
     "@babel/polyfill": "^7.4.4",
     "@babel/preset-env": "^7.5.5",
